// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`betterer.watch should throw when there is invalid config: { ignores: [Array] } 1`] = `
Array [
  "
Error: \\"ignores\\" must be an array of strings. Received \`[1234]\`.
",
]
`;

exports[`betterer.watch should throw when there is invalid config: { ignores: {} } 1`] = `
Array [
  "
Error: \\"ignores\\" must be an array of strings. Received \`[{}]\`.
",
]
`;

exports[`betterer.watch should throw when there is invalid config: { ignores: 1234 } 1`] = `
Array [
  "
Error: \\"ignores\\" must be an array of strings. Received \`[1234]\`.
",
]
`;

exports[`betterer.watch should throw when there is invalid config: { ignores: true } 1`] = `
Array [
  "
Error: \\"ignores\\" must be an array of strings. Received \`[true]\`.
",
]
`;
